syntax="proto3";
package app.trian.model;

import "google/protobuf/empty.proto";

option java_multiple_files = true;


service IngredientService{
  rpc getListIngredient(google.protobuf.Empty)returns(ListIngredientResponse){}

  rpc createIngredient(CreateIngredientRequest)returns(IngredientResponse){}

  rpc updateIngredient(UpdateIngredientRequest)returns(IngredientResponse){}

  rpc deleteIngredient(DeleteIngredientRequest)returns(IngredientResponse){}
}

//request
message CreateIngredientRequest{
  string name=1;
  string picture=2;
  string description=3;
  string unit=4;
}
message UpdateIngredientRequest{
  int64 id=1;
  string name=2;
  string picture=3;
  string description=4;
  string unit=5;
}
message DeleteIngredientRequest{
  int64 id=1;
}

//response
message IngredientResponse{
  int64 id=1;
  string name=2;
  string picture=3;
  string description=4;
  string unit=5;
  string createdAt=6;
  string updatedAt=7;
}

message ListIngredientResponse{
  repeated IngredientResponse ingredient=1;
}