syntax="proto3";
package app.trian.model;

import "google/protobuf/empty.proto";
import "app/trian/proto/ingredient.proto";

option java_multiple_files = true;

service RecipeIngredientService{
  rpc getListRecipeIngredientByRecipe(RecipeIngredientByRecipe)returns(ListRecipeIngredientResponse){}

  rpc createRecipeIngredient(CreateRecipeIngredientResponse)returns(RecipeIngredientResponse){}

  rpc updateRecipeIngredient(UpdateIngredientRequest)returns(RecipeIngredientResponse){}

  rpc deleteRecipeIngredient(DeleteRecipeIngredientResponse)returns(RecipeIngredientResponse){}
}
//req
message RecipeIngredientByRecipe{
  int64 id_recipe=1;
}
message UpdateRecipeIngredientResponse{
  int64 id=1;
  int64 quantity=2;
}
message CreateRecipeIngredientResponse{
  int64 id_recipe=1;
  int64 id_ingredient=2;
  int64 quantity=3;
}
message DeleteRecipeIngredientResponse{
  int64 id=1;
}

//res
message RecipeIngredientResponse{
  int64 id=1;
  int64 quantity=2;
  optional IngredientResponse ingredient=3;
}
message ListRecipeIngredientResponse{
  repeated RecipeIngredientResponse ingredient=1;
}